istio/alpine-repos-service-entry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: alpine-repos-ext
  namespace: istio-system
spec:
  hosts:
  - '*.alpinelinux.org'
  ports:
  - name: http
    number: 80
    protocol: HTTP
